Fix: errorHandling 외 여러 수정 사항 추가